Finalizing the index.html and style.css file

--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
 
     </div>
 
-    
+    <div style="width: 70%">
+    <div id="current"></div>
+    <div id="future" class="future"></div>
     </div>
+</div>
 
+<script src="./assets/scrip.js"></script>
 </body>
 </html>
