--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/style.css"></link>
     <title>Tempature Rising</title>
 </head>
 <body>
@@ -26,6 +27,6 @@
     </div>
 </div>
 
-<script src="./assets/scrip.js"></script>
+<script src="./assets/script.js"></script>
 </body>
 </html>
