Finalizing the script.js file

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
         <div style="width:20%">
         <h2>Select your city</h2>
-        <input id="City"></input>
+        <input id="city"></input>
         <button id="btn">Search Now</button>
-
+        <h2>Previous searched</h2>
     <div id="cities"></div>
 
     </div>
