Organizing the files and folders structure

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="./assets/style.css"></link> -->
+    <!-- <link rel="stylesheet" href="./assets/styles/style.css"></link> -->
     <title>Tempature Rising</title>
 </head>
 <style>
     body {
-        background-image: url("/assets/sun.png");
+        background-image: url("./assets//images/sun.png");
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
@@ -48,6 +48,6 @@
     </div>
 </div>
 
-<script src="./assets/script.js"></script>
+<script src="./assets/script/script.js"></script>
 </body>
 </html>
